[gd_scene load_steps=5 format=3 uid="uid://d2uadnxgg3xia"]

[ext_resource type="Script" uid="uid://c702pv61kci1r" path="res://scripts/ui/inventory_slot.gd" id="1_kscix"]
[ext_resource type="Texture2D" uid="uid://u22d7w6cuql6" path="res://assets/01_Sprites/03_Items/Rubbish Bag.png" id="2_r4ab7"]
[ext_resource type="FontFile" uid="uid://cu184tq6oycu2" path="res://assets/05_Fonts/KINDGARG.TTF" id="3_bngwc"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_uda2d"]

[node name="inventory_slot" type="Control"]
custom_minimum_size = Vector2(150, 150)
layout_mode = 3
anchors_preset = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 160.0
offset_bottom = 160.0
script = ExtResource("1_kscix")

[node name="OuterBorder" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.596078, 0.933333, 0.8, 1)

[node name="InnerBorder" type="ColorRect" parent="OuterBorder"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -70.0
offset_top = -70.0
offset_right = 70.0
offset_bottom = 70.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.611765, 0.603922, 0.584314, 1)

[node name="ItemIcon" type="Sprite2D" parent="OuterBorder/InnerBorder"]
position = Vector2(70, 70)
scale = Vector2(2.5, 2.5)
texture = ExtResource("2_r4ab7")

[node name="ItemQuantity" type="Label" parent="OuterBorder/InnerBorder"]
layout_mode = 0
offset_left = 5.0
offset_right = 45.0
offset_bottom = 54.0
theme_override_fonts/font = ExtResource("3_bngwc")
theme_override_font_sizes/font_size = 50
text = "1"

[node name="ItemButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_uda2d")

[node name="DetailsPanel" type="ColorRect" parent="."]
visible = false
layout_mode = 0
offset_top = -135.0
offset_right = 240.0
offset_bottom = -5.0
color = Color(0.596078, 0.933333, 0.8, 1)

[node name="ItemName" type="Label" parent="DetailsPanel"]
layout_mode = 1
offset_left = 5.0
offset_right = 45.0
offset_bottom = 23.0
theme_override_colors/font_color = Color(0.0745098, 0.0745098, 0.0745098, 1)
theme_override_fonts/font = ExtResource("3_bngwc")
theme_override_font_sizes/font_size = 40
text = "Name"

[node name="ItemType" type="Label" parent="DetailsPanel"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 5.0
offset_top = -21.5
offset_right = 101.0
offset_bottom = 21.5
grow_vertical = 2
theme_override_colors/font_color = Color(0.0745098, 0.0745098, 0.0745098, 0.784314)
theme_override_fonts/font = ExtResource("3_bngwc")
theme_override_font_sizes/font_size = 40
text = "Type"

[node name="ItemEffect" type="Label" parent="DetailsPanel"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = -23.0
offset_right = 49.0
grow_vertical = 0
theme_override_colors/font_color = Color(0.0745098, 0.0745098, 0.0745098, 0.588235)
theme_override_fonts/font = ExtResource("3_bngwc")
theme_override_font_sizes/font_size = 40
text = "Effect"

[node name="UsagePanel" type="ColorRect" parent="."]
visible = false
layout_mode = 0
offset_top = -135.0
offset_right = 240.0
offset_bottom = -5.0
color = Color(0.596078, 0.933333, 0.8, 1)

[node name="UseButton" type="Button" parent="UsagePanel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -115.0
offset_top = 10.0
offset_right = 115.0
offset_bottom = 61.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("3_bngwc")
theme_override_font_sizes/font_size = 40
text = "Use
"

[node name="DropButton" type="Button" parent="UsagePanel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -115.0
offset_top = -62.0
offset_right = 115.0
offset_bottom = -11.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("3_bngwc")
theme_override_font_sizes/font_size = 40
text = "Drop"

[connection signal="focus_entered" from="ItemButton" to="." method="_on_item_button_focus_entered"]
[connection signal="focus_exited" from="ItemButton" to="." method="_on_item_button_focus_exited"]
[connection signal="mouse_entered" from="ItemButton" to="." method="_on_item_button_mouse_entered"]
[connection signal="mouse_exited" from="ItemButton" to="." method="_on_item_button_mouse_exited"]
[connection signal="pressed" from="ItemButton" to="." method="_on_item_button_pressed"]
[connection signal="pressed" from="UsagePanel/UseButton" to="." method="_on_use_button_pressed"]
[connection signal="pressed" from="UsagePanel/DropButton" to="." method="_on_drop_button_pressed"]
